--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ nav{
 }
 
 .box-col a{
-    font-size: 13px;
+    font-size: 18px;
     color: #009999;
     font-weight: 500;
 }
@@ -185,4 +185,75 @@ nav{
 .products-slider .products img{
     max-width: 200px;
     max-height: 200;
+}
+
+.products-slider .products::-webkit-scrollbar{
+    display: none;
+}
+
+.products-slider-with-price{
+    background: #fff;
+    margin: 0 30px;
+    padding: 20px;
+    margin-bottom: 15px;
+}
+
+.products-slider-with-price .products{
+    display: flex;
+    overflow: auto;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.products-slider-with-price .products::-webkit-scrollbar{
+    display: none;
+}
+
+.product-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    min-width: 210px;
+    background: #fbfbfb;
+}
+
+.product-card img{
+    width: 100px;
+    margin: 0 50px;
+}
+
+.product-offer p{
+    background: #be0b3b;
+    color: #fff;
+    display: inline-block;
+    padding: 2px 5px;
+    border-radius: 2px;
+    margin: 8px 0;
+    font-size: 13px;
+}
+
+.product-offer span{
+    color: #be0b3b;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.product-price{
+    color: gray;
+    font-size: 13px;
+}
+
+.product-card h4{
+    color: #525252;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    background: #131921;
+    padding: 20px 60px;
 }
